# ArmSpace

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
cli/: CMakeLists.txt  main.cpp
docs/: SRS_0.1.0.tex  SRS_0.1.1.tex
docs/specs/: SRS_0.1.0.tex
include/: errors.h  robotor_arm_validator.h
libs/errors/: CMakeLists.txt  errors.h
libs/validator/: CMakeLists.txt  robotor_arm_validator.cpp  robotor_arm_validator.h
schemes/: input_scheme.json
scripts/: rebuild_and_open.sh
src/: CMakeLists.txt  main.cpp  robotor_arm_validator.cpp
tests/: CMakeLists.txt  first_test.cpp  validator_tests.cpp
